syntax = "proto3";

package go.micro.srv.PostAvatar;

service Example {
	rpc PostAvatar(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	//二进制图片 
	bytes Avatar =1; 
	//sessionid 
	string Sessionid=2; 
	//文件大小 
	int64 filesize =3; 
	//文件名字
	string filename =4 ;
}

message Response {
	//错误码 
	string Errno = 1; 
	//错误信息 
	string Errmsg = 2; 
	//不完整的图片地址
	string Avatar_url = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
